Initial hosting changes.

--- a/Samples/MQTTnet.Samples.csproj
+++ b/Samples/MQTTnet.Samples.csproj
@@ -15,13 +15,10 @@
     <ItemGroup>
 
         <ProjectReference Include="..\Source\MQTTnet.AspnetCore\MQTTnet.AspNetCore.csproj" />
-
-        <ProjectReference Include="..\Source\MQTTnet.Clustering.Orleans.Client\MQTTnet.Clustering.Orleans.Client.csproj" />
-
-        <ProjectReference Include="..\Source\MQTTnet.Clustering.Orleans.Server\MQTTnet.Clustering.Orleans.Server.csproj" />
         <ProjectReference Include="..\Source\MQTTnet.Extensions.ManagedClient\MQTTnet.Extensions.ManagedClient.csproj" />
         <ProjectReference Include="..\Source\MQTTnet.Extensions.Rpc\MQTTnet.Extensions.Rpc.csproj" />
         <ProjectReference Include="..\Source\MQTTnet.Extensions.WebSocket4Net\MQTTnet.Extensions.WebSocket4Net.csproj" />
+        <ProjectReference Include="..\Source\MQTTnet.Hosting\MQTTnet.Hosting.csproj" />
         <ProjectReference Include="..\Source\MQTTnet\MQTTnet.csproj" />
     </ItemGroup>
 
